Fix bug where btn-secondary doesn't have a background color on iPhone and disable zoom on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -209,6 +209,9 @@ aside {
     height: 100px;
     margin-bottom: 5px;
   }
+  section > .btn-secondary {
+	  background-color: #CCCCCC;
+  }
 }
 
 span.picture {
